[OC-321] Fixed display issues when text is too long #time 1h #done

--- a/ui/main/src/app/modules/cards/components/card/card.component.scss
+++ b/ui/main/src/app/modules/cards/components/card/card.component.scss
@@ -11,6 +11,7 @@
 
 .card {
   margin-bottom: 5px;
+  word-break: break-all;
 }
 
 .card-title {
